# ad-campaign-agent

./: CODE_REVIEW_REPORT.md  FIX_SUMMARY.md  LLM_ORCHESTRATOR.md  Makefile  OPTIMIZE_TESTS.md  README.md  TEST_PERFORMANCE_ANALYSIS.md  TEST_SLOW_REASONS.md  TEST_VERIFICATION_REPORT.md  check_gemini.py  docker-compose.yml  pyproject.toml  requirements.txt  run_tests_with_progress.sh  start_services.sh  stop_services.sh
app/common/: config.py  db.py  exceptions.py  middleware.py  schemas.py  validators.py
app/orchestrator/: llm_service.py  simple_service.py
app/orchestrator/clients/: creative_client.py  logs_client.py  meta_client.py  optimizer_client.py  product_client.py  strategy_client.py  validator_client.py
app/services/creative_service/: creative_policy.yaml  creative_utils.py  main.py  schemas.py
app/services/logs_service/: main.py  schemas.py
app/services/meta_service/: main.py
app/services/optimizer_service/: main.py
app/services/product_service/: grouping.py  loaders.py  main.py  schemas.py  scoring.py
app/services/strategy_service/: main.py  schemas.py  strategy_logic.py
docs/: OPTIMIZATION_RECOMMENDATIONS.md
examples/: __init__.py  demo_workflow.py  example_usage.py
tests/: __init__.py  conftest.py  test_all_services.py  test_llm_orchestrator.py  test_logs_service.py  test_meta_service.py  test_optimizer_service.py  test_product_service.py  test_strategy_service.py  test_strategy_service_logic.py
tests/services/product_service/: __init__.py  test_grouping.py  test_scoring.py  test_select_products.py
tests/services/strategy_service/: test_generate_strategy_invalid_input.py
