[tool.poetry]
name = "ad-campaign-agent"
version = "1.0.0"
description = "Ad Campaign Agent - AI-powered orchestrator for advertising campaigns"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
gunicorn = "^23.0.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
httpx = "^0.27.2"
google-generativeai = "^0.8.3"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
python-json-logger = "^2.0.7"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"

[tool.poetry.scripts]
start-services = "bash scripts/start_services.sh"
start-orchestrator = "bash scripts/start_orchestrator_llm.sh"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
# Performance optimizations
# Use pytest-xdist for parallel execution: pytest tests/ -n auto
# Mark slow tests: @pytest.mark.slow
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marks tests as fast (run with '-m fast')",
]

